samples/_failures_safe/1761392625_31f76f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b9237642.c: In function ‘mesh_update_bounds’:
./samples/SAFE/__tmp_b9237642.c:136:33: error: invalid operands to binary > (have ‘double’ and ‘struct BoundingBox’)
  136 |         if (mesh->vertices[i].y > mesh->bounds
      |             ~~~~~~~~~~~~~~~~~~~ ^ ~~~~~~~~~~~~
      |                              |        |
      |                              double   struct BoundingBox
./samples/SAFE/__tmp_b9237642.c:136:47: error: expected ‘)’ at end of input
  136 |         if (mesh->vertices[i].y > mesh->bounds
      |            ~                                  ^
      |                                               )
./samples/SAFE/__tmp_b9237642.c:136:9: error: expected declaration or statement at end of input
  136 |         if (mesh->vertices[i].y > mesh->bounds
      |         ^~
./samples/SAFE/__tmp_b9237642.c:136:9: error: expected declaration or statement at end of input
